bug(tables): fixed display of tables on small screens

--- a/src/app/album/album.component.scss
+++ b/src/app/album/album.component.scss
@@ -1,6 +1,2 @@
-h1 {
-    text-align: center;
-    color: #1c59d6;
-    margin-bottom: 20px;
-  }
+
   
